--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^16.18.11",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
+    "@types/react-redux": "^7.1.25",
     "axios": "^1.2.2",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "react": "^18.2.0",
