--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
-  "name": "go-charge",
+  "name": "gocharge-ts-redux",
+  "homepage": "https://yogesh-haryana.github.io/Go-Charge-Redux-TS",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "-": "^0.0.1",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.11.0",
@@ -18,6 +20,7 @@
     "@types/react-redux": "^7.1.25",
     "axios": "^1.2.2",
     "eslint-config-airbnb-typescript": "^17.0.0",
+    "gh-pages": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
@@ -26,10 +29,13 @@
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.7",
     "redux": "^4.2.0",
+    "save-dev": "^0.0.1-security",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
