--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "gocharge-ts-redux",
-  "homepage": "https://yogesh-haryana.github.io/Go-Charge-Redux-TS",
+  "homepage": "https://yogesh-haryana.github.io/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "-": "^0.0.1",
-    "@emotion/react": "^11.10.4",
-    "@emotion/styled": "^11.10.4",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.11.0",
-    "@mui/material": "^5.10.5",
-    "@mui/styles": "^5.10.5",
+    "@mui/material": "^5.11.3",
+    "@mui/styles": "^5.11.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
